--- a/account/bin/main/application.yml
+++ b/account/bin/main/application.yml
@@ -1,5 +1,6 @@
 server:
   port: 8081
+
 management:
   endpoints:
     web:
@@ -9,9 +10,31 @@ management:
 spring:
   application:
     name: account
+  
+  # JPA Configuration
+  datasource:
+    url: jdbc:h2:mem:accountdb;DB_CLOSE_DELAY=-1;DB_CLOSE_ON_EXIT=FALSE
+    username: sa
+    password: 
+    driver-class-name: org.h2.Driver
+  
+  jpa:
+    hibernate:
+      ddl-auto: create-drop
+    show-sql: true
+    properties:
+      hibernate:
+        format_sql: true
+  
+  # H2 Console (for development)
+  h2:
+    console:
+      enabled: true
+      path: /h2-console
 
 logging:
   level:
     org.springframework.web: INFO
-    org.springframework.cloud.gateway: INFO
-    reactor.netty.http.server.AccessLog: INFO
+    account: DEBUG
+    org.hibernate.SQL: DEBUG
+    org.hibernate.type.descriptor.sql.BasicBinder: TRACE
